fix overflow param

--- a/styles/homePage.module.css
+++ b/styles/homePage.module.css
@@ -151,6 +151,7 @@
 	background-color: #F7F9FB;
 	padding-top: 38px;
 	position: relative;
+	overflow: hidden;
 }
 .clinicCardContainer:before {
 	content: '';
